methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:2: error: illegal start of statement (no modifiers allowed here)
  def faireMotif(){override def run() {
                   ^