methods.picture.PictureMono2.scala.code
override def run() {
  def faireMotif(){override def run() {
  def MarqueSol(){
  baisseBrosse();leveBrosse()
  avance();droite();avance()
}

def faireV(){
  	MarqueSol()
    MarqueSol()
		baisseBrosse();leveBrosse();gauche();avance();avance();gauche()
}

var i=0
for (i<-1 to 4){
  avance();avance();gauche()
  faireV()
}
}
avance(6)
}
def faireLigne(){
  for (k<-1 to 3){
    faireMotif()
    avance()
  }

}
}